# wine_admin

./: .gitignore  alembic.ini  note  package.json  pyproject.toml  requirements.txt  setup.cfg  spider_data_quality_todo.md
.github/: copilot-instructions.md
wine_spider/: pyproject.toml  scrapy.cfg  zachys.html
wine_spider/scripts/: backfill_incomplete_auctions.py  fill_auction_sales.py  run_scraping_reports.py
wine_spider/tests/: test_auction_filtering.py  test_aws_waf_middleware.py  test_backfill_incomplete_auctions.py  test_baghera.py  test_bonhams.py  test_bonhams_lot_parser.py  test_christies.py  test_data_export_client.py  test_data_exporter_cli.py  test_fill_auction_sales.py  test_login_middleware.py  test_pipelines.py  test_request_timing_middleware.py  test_run_spiders.py  test_scraping_reports.py  test_sothebys.py  test_sothebys_login.py  test_steinfels.py  test_sylvies.py  test_tajan.py  test_tajan_curl_cffi_middleware.py  test_tajan_lot_detail_parser.py  test_tajan_progress.py  test_wineauctioneer.py  test_zachys.py  utils.py
wine_spider/wine_spider/: .env  items.py  middlewares.py  pipelines.py  run_spiders.py  settings.py
wine_spider/wine_spider/database/: database_client.py  test.py
wine_spider/wine_spider/exceptions/: __init__.py  exceptions.py
wine_spider/wine_spider/helpers/: __init__.py  auction_aggregator.py  captcha_parser.py  continent_parser.py  date_parser.py  environment_helper.py  external_id.py  json_serializer.py  price_helper.py  static.py  string_processor.py  title_parser.py  volume_parser.py  volumn_parser.py
wine_spider/wine_spider/middlewares/: aws_waf_bypass.py  bonhams_header_middleware.py  login_middleware.py  playwright_resource_blocker_middleware.py  request_timing_middleware.py  sothebys_login_middleware.py  tajan_curl_cffi_middleware.py  wineauctioneer_login_middleware.py
wine_spider/wine_spider/reprocessor/: sothebys.py
wine_spider/wine_spider/reprocessors/: sothebys.py
wine_spider/wine_spider/scripts/: fill_auction_sales.py
(+350 files in other folders)
